[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4.1"
inquire = "0.6.2"
prost = "0.12.1"
prost-types = "0.12.1"
tokio = {verseion = "1.32.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.10.1"
ulid = { version = "1.1.0", features = ["serde"] }

[build-dependencies]
tonic-build = "0.10.1"
