[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
enum-iterator = "1.4.1"
http = "0.2.9"
hyper = "0.14.27"
inquire = "0.6.2"
prost = "0.12.1"
prost-types = "0.12.1"
ratatui = "0.25.0"
tokio = {verseion = "1.32.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.10.1"
tower = "0.4.13"
ulid = { version = "1.1.0", features = ["serde"] }

[build-dependencies]
tonic-build = "0.10.1"
